<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/ldaftar"
            android:textSize="15pt"
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edNama"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="88dp"
            android:ems="10"
            android:hint="@string/enama"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.427"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edAlamat"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="148dp"
            android:ems="10"
            android:hint="@string/ealamat"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.427"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Jenis Kelamin"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edAlamat" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="130dp"
            android:layout_height="34dp"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/edAlamat">

            <RadioButton
                android:id="@+id/laki"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Laki-Laki"
                android:textSize="11dp" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="126dp"
            android:layout_height="34dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/edAlamat" >

            <RadioButton
                android:id="@+id/Perempuan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Perempuan"
                android:textSize="11dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/Agama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:layout_marginBottom="40dp"
            android:text="Agama"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.261" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="112dp"
            android:layout_height="285dp"
            android:layout_marginStart="79dp"
            android:layout_marginLeft="79dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Islam" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Katolik" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kristen" />

            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hindu" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Budha" />

            <RadioButton
                android:id="@+id/radioButton11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Konghucu" />


        </RadioGroup>

        <EditText
            android:id="@+id/EdEmail"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/eemail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <EditText
            android:id="@+id/edPass"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/epass"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EdEmail" />

        <EditText
            android:id="@+id/edrepas"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/erepass"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edPass" />

        <Button
            android:id="@+id/btBatal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/btbatal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edrepas" />

        <Button
            android:id="@+id/btDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/btdaftar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btBatal"
            app:layout_constraintTop_toBottomOf="@+id/edrepas" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>